--- a/src/views/api-products-menu.handlebars
+++ b/src/views/api-products-menu.handlebars
@@ -7,9 +7,6 @@
       <a class="navbar-brand text-white" href="#">Mega-Friday</a>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a href="/purchase" class="btn btn-outline-light ms-3"><i class="bi bi-bag-check me-2"></i>My Purchases</a>
-        </li>
-        <li class="nav-item">
           <a href="/profile" class="btn btn-outline-light ms-3 me-3"><i class="bi bi-person-circle"></i></a>
         </li>
           <li class="nav-item">
@@ -20,26 +17,12 @@
   </div>
 </nav>
 
-{{#if firstName}}
-  <div class="d-flex justify-content-center align-items-center user">
-    <h5 class="text-white mt-1">
-      Welcome,
-      {{firstName}}. Your role is
-      {{rol}}
-    </h5>
-  </div>
-{{/if}}
-
 <div class="container mt-4">
   <div class="row">
     <div class="col d-flex flex-column align-items-center justify-content-center">
-      <a href="/products" class="btn btn-outline-light btn-lg my-2 w-50">PRODUCTS</a>
-      <a href="/api-products-menu" class="btn btn-outline-light btn-lg my-2 w-50">API PRODUCTS</a>
-      <a href="/crud-api-carts" class="btn btn-outline-light btn-lg my-2 w-50">API CARTS</a>
-      <a href="/realtimeproducts" class="btn btn-outline-light btn-lg my-2 w-50">PRODUCTS SOCKET</a>
-      <a href="/chat" class="btn btn-outline-light btn-lg my-2 w-50">CHATS</a>
-      <a href="/api/docs" class="btn btn-outline-light btn-lg my-2 w-50">DOCUMENTATION</a>
-      <a href="/admin" class="btn btn-outline-light btn-lg my-2 w-50">ADMINISTRATOR</a>
+      <a href="/api/products" class="btn btn-outline-light btn-lg my-2 w-50">API ALL PRODUCTS</a>
+      <a href="/product-by-id" class="btn btn-outline-light btn-lg my-2 w-50">API PRODUCT BY ID</a>
+      <a href="/crud-api-products" class="btn btn-outline-light btn-lg my-2 w-50">CRUD API PRODUCTS</a>
     </div>
   </div>
 </div>
