--- a/src/views/crud-api-products.handlebars
+++ b/src/views/crud-api-products.handlebars
@@ -7,9 +7,6 @@
       <a class="navbar-brand text-white" href="#">Mega-Friday</a>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a href="/api/sessions/current" class="btn btn-outline-light ms-3 me-3"><i class="bi bi-person-circle"></i></a>
-        </li>
-        <li class="nav-item">
           <a href="/logout" class="btn btn-success ms-1 me-4"><i class="bi bi-box-arrow-left me-2"></i>Logout</a>
         </li>
       </ul>
@@ -18,9 +15,9 @@
 </nav>
 
 <div class="container crudProducts mt-4">
-  <h1 class="mb-2">CRUD Products</h1>
+  <h1 class="mb-2">CRUD API Products</h1>
   <div class="d-flex flex-row-reverse mt-1 mb-1">
-    <button class="btn btn-success bi bi-plus" data-toggle="modal" data-target="#crearModal">Add Product</button>
+    <button class="btn btn-success bi bi-plus" data-toggle="modal" data-target="#crearModal">Create Product</button>
   </div>
   <table class="table text-white">
       <thead>
@@ -59,43 +56,46 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="crearModalLabel">Add Product</h5>
+                <h5 class="modal-title" id="crearModalLabel">Create Product</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form action="/crud-products" method="POST">
-                    <div class="form-group">
-                      <label for="title">Title</label>
+                <form action="/api/products" method="POST">
+                    <div class="form-group mb-2">
+                      <label class="mb-1" for="title">Title</label>
                       <input type="text" class="form-control" id="title" name="title" value="{{this.title}}">
                     </div>
-                    <div class="form-group">
-                      <label for="description">Description</label>
+                    <div class="form-group mb-2">
+                      <label class="mb-1" for="description">Description</label>
                       <textarea class="form-control" id="description" name="description">{{this.description}}</textarea>
                     </div>
-                    <div class="form-group">
-                      <label for="code">Code</label>
+                    <div class="form-group mb-2">
+                      <label class="mb-1" for="code">Code</label>
                       <input type="text" class="form-control" id="code" name="code" value="{{this.code}}">
                     </div>
-                    <div class="form-group">
-                        <label for="price">Price</label>
-                        <input type="number" class="form-control" id="price" name="price" value="{{this.price}}">
+                    <div class="form-group mb-2">
+                      <label class="mb-1" for="price">Price</label>
+                      <input type="number" class="form-control" id="price" name="price" value="{{this.price}}">
                     </div>
-                    <div class="form-group">
-                      <label for="stock">Stock</label>
+                    <div class="form-group mb-2">
+                      <label class="mb-1" for="stock">Stock</label>
                       <input type="number" class="form-control" id="stock" name="stock" value="{{this.stock}}">
                     </div>
-                    <div class="form-group">
-                      <label for="category">Category</label>
+                    <div class="form-group mb-2">
+                      <label class="mb-1" for="category">Category</label>
                       <input type="text" class="form-control" id="category" name="category" value="{{this.category}}">
                     </div>
-                    <div class="form-group">
-                      <label for="thumbnail">Thumbnail</label>
+                    <div class="form-group mb-2">
+                      <label class="mb-1" for="thumbnail">Thumbnail</label>
                       <input type="text" class="form-control" id="thumbnail" name="thumbnail" value="{{this.thumbnail}}">
                     </div>
-                  <button type="submit" class="btn btn-success">Add</button>
+                  <button type="submit" class="btn btn-success mb-3">Create</button>
+
                 </form>
+                <button class="btn btn-primary" onclick="closeModalAndRedirect()">Close and refresh Products</button>
+
             </div>
         </div>
     </div>
@@ -108,55 +108,49 @@
       <div class="modal-dialog" role="document">
           <div class="modal-content">
               <div class="modal-header">
-                  <h5 class="modal-title" id="editarModalLabel{{this._id}}">Product edit</h5>
+                  <h5 class="modal-title" id="editarModalLabel{{this._id}}">Update Product</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                   </button>
               </div>
               <div class="modal-body">
-                  <form action="/crud-products/{{this._id}}" method="POST">
-                      <div class="form-group">
-                        <label for="productId">Id</label>
-                        <input type="text" class="form-control" id="productId" name="productId" value="{{this._id}}" disabled>
+                  <form action="/api/products/{{this._id}}?_method=PUT" method="POST">
+                      <input type="hidden" name="_method" value="PUT"> 
+                      <div class="form-group mb-2">
+                        <label class="mb-1" for="_id">Id</label>
+                        <input type="text" class="form-control" id="_id" name="_id" value="{{this._id}}" disabled>
                       </div>
-                      <div class="form-group">
-                        <label for="title">Title</label>
+                      <div class="form-group mb-2">
+                        <label class="mb-1" for="title">Title</label>
                         <input type="text" class="form-control" id="title" name="title" value="{{this.title}}">
                       </div>
-                      <div class="form-group">
-                        <label for="description">Description</label>
+                      <div class="form-group mb-2">
+                        <label class="mb-1" for="description">Description</label>
                         <textarea class="form-control" id="description" name="description">{{this.description}}</textarea>
                       </div>
-                      <div class="form-group">
-                        <label for="code">Code</label>
+                      <div class="form-group mb-2">
+                        <label class="mb-1" for="code">Code</label>
                         <input type="text" class="form-control" id="code" name="code" value="{{this.code}}">
                       </div>
-                      <div class="form-group">
-                          <label for="price">Price</label>
+                      <div class="form-group mb-2">
+                          <label class="mb-1" for="price">Price</label>
                           <input type="number" class="form-control" id="price" name="price" value="{{this.price}}">
                       </div>
-                      <div class="form-group">
-                        <label for="status">Status</label>
-                        <input type="boolean" class="form-control" id="status" name="status" value="{{this.status}}" disabled>
-                      </div>
-                      <div class="form-group">
-                        <label for="stock">Stock</label>
+                      <div class="form-group mb-2">
+                        <label class="mb-1" for="stock">Stock</label>
                         <input type="number" class="form-control" id="stock" name="stock" value="{{this.stock}}">
                       </div>
-                      <div class="form-group">
-                        <label for="category">Category</label>
+                      <div class="form-group mb-2">
+                        <label class="mb-1" for="category">Category</label>
                         <input type="text" class="form-control" id="category" name="category" value="{{this.category}}">
                       </div>
-                      <div class="form-group">
-                        <label for="thumbnail">Thumbnail</label>
+                      <div class="form-group mb-2">
+                        <label class="mb-1" for="thumbnail">Thumbnail</label>
                         <input type="text" class="form-control" id="thumbnail" name="thumbnail" value="{{this.thumbnail}}">
                       </div>
-                      <div class="form-group">
-                        <label for="owner">Owner</label>
-                        <input type="text" class="form-control" id="owner" name="owner" value="{{this.owner}}" disabled>
-                      </div>
-                      <button type="submit" class="btn btn-primary">Edit</button>
+                      <button type="submit" class="btn btn-success mb-3">Update</button>
                   </form>
+                  <button class="btn btn-primary" onclick="closeModalAndRedirect()">Close and refresh Products</button>
               </div>
           </div> 
       </div>
@@ -180,7 +174,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <form action="/crud-products/delete/{{this._id}}?_method=DELETE" method="POST">
+                <form action="/api/products/{{this._id}}?_method=DELETE" method="POST">
                     <input type="hidden" name="_method" value="DELETE">
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
@@ -192,6 +186,21 @@
 {{/each}}
 
 
-    
-    
-    
+<script>
+  // Función para cerrar el modal y redirigir a la vista de productos
+  function closeModalAndRedirect() {
+    $('#crearModal').modal('hide'); // Cierra el modal
+    window.location.href = '/crud-api-products'; 
+  }
+</script>
+
+
+
+
+
+
+
+
+
+
+
