--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -27,13 +27,13 @@
   </div>
 {{/if}}
 
-<div class="container buttonMenu mt-4">
+<div class="container mt-4">
   <div class="row">
-    <div class="col d-flex align-items-center justify-content-center">
-        <a href="/crud-products" class="btn btn-outline-light btn-lg mx-2">CRUD PRODUCTS</a>
-        <a href="/crud-users" class="btn btn-outline-light btn-lg mx-2">CRUD USERS</a>
-        <a href="/api/products/mockingproducts" class="btn btn-outline-light btn-lg mx-2">MOCKING PRODUCTS</a>
-        <a href="/api/loggerTest" class="btn btn-outline-light btn-lg mx-2">LOGGER TEST</a>
+    <div class="col d-flex flex-column align-items-center justify-content-center">
+        <a href="/crud-products" class="btn btn-outline-light btn-lg my-2 w-50">CRUD PRODUCTS</a>
+        <a href="/crud-users" class="btn btn-outline-light btn-lg my-2 w-50">CRUD USERS</a>
+        <a href="/api/products/mockingproducts" class="btn btn-outline-light btn-lg my-2 w-50">MOCKING PRODUCTS</a>
+        <a href="/api/loggerTest" class="btn btn-outline-light btn-lg my-2 w-50">LOGGER TEST</a>
     </div>
   </div>
 </div>
