--- a/src/views/crud-api-carts.handlebars
+++ b/src/views/crud-api-carts.handlebars
@@ -7,7 +7,7 @@
       <a class="navbar-brand text-white" href="#">Mega-Friday</a>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a href="/purchase" class="btn btn-outline-light ms-3"><i class="bi bi-bag-check me-2"></i>My Purchases</a>
+          <a href="/purchases" class="btn btn-outline-light ms-3"><i class="bi bi-bag-check me-2"></i>My Purchases</a>
         </li>
         <li class="nav-item">
           <a href="/profile" class="btn btn-outline-light ms-3 me-3"><i class="bi bi-person-circle"></i></a>
@@ -20,18 +20,11 @@
   </div>
 </nav>
 
-<!--
-<div class="d-flex flex-column align-items-center justify-content-center">
--->
-<!--
-</div>
--->
-
 <div class="container mt-4">
   <div class="row">
     <div class="col-md-6 mb-3">
       <form class="cartsForm mt-3 text-white w-100 h-100">
-        <a href="/api/carts" class="btn btn-outline-light btn-lg my-5 w-100">API ALL CARTS</a>
+        <a href="/api/carts" class="btn btn-outline-light btn-lg my-5 w-100">API All Carts</a>
       </form>
     </div>
 
