--- a/src/views/crud-api-products.handlebars
+++ b/src/views/crud-api-products.handlebars
@@ -189,7 +189,7 @@
 <script>
   // Función para cerrar el modal y redirigir a la vista de productos
   function closeModalAndRedirect() {
-    $('#crearModal').modal('hide'); // Cierra el modal
+    $('#crearModal').modal('hide'); 
     window.location.href = '/crud-api-products'; 
   }
 </script>
