--- a/src/views/menu.handlebars
+++ b/src/views/menu.handlebars
@@ -7,9 +7,6 @@
       <a class="navbar-brand text-white" href="#">Mega-Friday</a>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a href="/purchase" class="btn btn-outline-light ms-3"><i class="bi bi-bag-check me-2"></i>My Purchases</a>
-        </li>
-        <li class="nav-item">
           <a href="/profile" class="btn btn-outline-light ms-3 me-3"><i class="bi bi-person-circle"></i></a>
         </li>
           <li class="nav-item">
@@ -36,6 +33,7 @@
       <a href="/products" class="btn btn-outline-light btn-lg my-2 w-50">PRODUCTS</a>
       <a href="/api-products-menu" class="btn btn-outline-light btn-lg my-2 w-50">API PRODUCTS</a>
       <a href="/crud-api-carts" class="btn btn-outline-light btn-lg my-2 w-50">API CARTS</a>
+      <a href="/api-tickets" class="btn btn-outline-light btn-lg my-2 w-50">API TICKETS</a>
       <a href="/realtimeproducts" class="btn btn-outline-light btn-lg my-2 w-50">PRODUCTS SOCKET</a>
       <a href="/chat" class="btn btn-outline-light btn-lg my-2 w-50">CHATS</a>
       <a href="/api/docs" class="btn btn-outline-light btn-lg my-2 w-50">DOCUMENTATION</a>
