--- a/src/views/product-by-id.handlebars
+++ b/src/views/product-by-id.handlebars
@@ -18,8 +18,7 @@
   <div class="row">
     <div class="col d-flex flex-column align-items-center justify-content-center">
       <h1 class="mb-4">Product By Id</h1>
-
-      <form method="GET" id="productForm">
+      <form method="GET" id="productForm" class="cartsForm">
         <input type="text" id="pid" placeholder="Product Id" class="form-control form-control-lg">
         <div class="text-center mt-3"> 
           <button class="btn btn-success btn-lg" type="submit">List</button>
