--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,24 +1,95 @@
-<h1>Cart</h1>
+<nav class="navbar navbar-expand-lg bg-body-tertiary mt-2">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand text-white" href="#">Mega-Friday</a>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a href="/logout" class="btn btn-success ms-1 me-4"><i class="bi bi-box-arrow-left me-2"></i>Logout</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-{{#if cart.length}}
-  <table>
-    <thead>
-      <tr>
-        <th>title</th>
-        <th>price</th>
-        <th>quantity</th>
-      </tr>
-    </thead>
-    <tbody>
-      {{#each cart}}
-        <tr>
-          <td>{{this.title}}</td>
-          <td>{{this.price}}</td>
-          <td>{{this.quantity}}</td>
-        </tr>
-      {{/each}}
-    </tbody>
-  </table>
-{{else}}
-  <p>No products in the cart</p>
-{{/if}}
+<div class="container mt-4">
+  <h1 class="mb-4 text-white">Shopping Cart</h1>
+  <div class="row">  
+    {{#if cart.length}}
+    {{#each cart}}
+    <div class="col-md-4 mb-3">
+        <p class="card-text cartId text-white">{{this._id}}</p>
+        <div class="card">
+            <img src="{{this.thumbnail}}" class="card-img-top" alt="imagen">
+            <div class="card-body">
+                <h5 class="card-title">{{this.title}}</h5>
+                <p class="card-text">Price: ${{this.price}}</p>
+                <p class="card-text">Quantity: {{this.quantity}}</p>
+            </div>
+        </div>
+    </div>
+    {{/each}}
+    <div class="col-md-12 text-center mt-4">
+      <button class="btn btn-success buy-button">Buy Now</button>
+    </div>
+    {{else}}
+    <div class="col-md-12 text-center text-white">
+        <p>No products in the cart</p>
+    </div>
+    {{/if}}
+  </div>
+</div>
+
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  const buyButtons = document.querySelectorAll(".buy-button");
+  const cid = document.querySelector(".cartId").textContent;
+
+  buyButtons.forEach(function(button) {
+    button.addEventListener("click", function(event) {
+      buyNow(cid);
+    });
+  });
+
+  function buyNow(cid) {
+  
+    fetch(`/cart/${cid}/purchase`, {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      }
+    })
+    .then(response => {
+      if (response.ok) {
+        Toastify({
+          text: "Thanks for your purchase",
+          duration: 3000,
+          newWindow: true,
+          close: true,
+          gravity: "top",
+          position: "right",
+          stopOnFocus: true,
+          style: {
+            background: "linear-gradient(to right, #00b09b, #96c93d)",
+          },
+        }).showToast();
+        localStorage.removeItem('cartData');
+        localStorage.removeItem('cartCount');
+        setTimeout(() => {
+          window.location.href = "/purchases";
+        }, 3000);
+      } else {
+        console.error('Purchase error');
+      }
+    })
+    .catch(error => {
+      console.error('Server error:', error);
+    });
+  }
+});
+</script>
+
+
+
