--- a/src/views/error.handlebars
+++ b/src/views/error.handlebars
@@ -1,4 +1,29 @@
-<div class="error">
-    <h1>Something went wrong...</h1>
-    {{error}}
+<nav class="navbar navbar-expand-lg bg-body-tertiary mt-2">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+      <a class="navbar-brand text-white" href="#">Mega-Friday</a>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a href="/logout" class="btn btn-success ms-1 me-4"><i class="bi bi-box-arrow-left me-2"></i>Logout</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container text-white">
+  <div class="row">
+    <div class="d-flex justify-content-center align-items-center">
+      <h1 class="mt-5 mb-3">Something went wrong...</h1>
+    </div>  
+  </div>
+  
+  <div class="row">
+    <div class="d-flex justify-content-center align-items-center">
+      {{error}}
+    </div>
+  </div>
 </div>
