--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -7,6 +7,9 @@
       <a class="navbar-brand text-white" href="#">Mega-Friday</a>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
+          <a href="/purchases" class="btn btn-outline-light ms-3 me-2"><i class="bi bi-bag-check me-2"></i>My Purchases</a>
+        </li>
+        <li class="nav-item">
           <a href="/logout" class="btn btn-success ms-1 me-4"><i class="bi bi-box-arrow-left me-2"></i>Logout</a>
         </li>
       </ul>
