--- a/src/views/api-users-menu.handlebars
+++ b/src/views/api-users-menu.handlebars
@@ -6,9 +6,6 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <a class="navbar-brand text-white" href="#">Mega-Friday</a>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a href="/api/sessions/current" class="btn btn-outline-light ms-3 me-3"><i class="bi bi-person-circle"></i></a>
-        </li>
           <li class="nav-item">
           <a href="/logout" class="btn btn-success ms-1 me-4"><i class="bi bi-box-arrow-left me-2"></i>Logout</a>
         </li>
@@ -17,24 +14,16 @@
   </div>
 </nav>
 
-{{#if firstName}}
-  <div class="d-flex justify-content-center align-items-center user">
-    <h5 class="text-white mt-1">
-      Welcome,
-      {{firstName}}. Your role is
-      {{rol}}
-    </h5>
-  </div>
-{{/if}}
-
 <div class="container mt-4">
   <div class="row">
     <div class="col d-flex flex-column align-items-center justify-content-center">
-        <a href="/crud-products" class="btn btn-outline-light btn-lg my-2 w-50">CRUD PRODUCTS</a>
-        <a href="/api/products/mockingproducts" class="btn btn-outline-light btn-lg my-2 w-50">MOCKING PRODUCTS</a>
-        <a href="/rud-users" class="btn btn-outline-light btn-lg my-2 w-50">UPDATE ROLE - DELETE INACTIVE USERS</a>
-        <a href="/api-users-menu" class="btn btn-outline-light btn-lg my-2 w-50">API USERS</a>
-        <a href="/api/loggerTest" class="btn btn-outline-light btn-lg my-2 w-50">LOGGER TEST</a>
+      <a href="/api/users" class="btn btn-outline-light btn-lg my-2 w-50">API ALL USERS</a>
+      <a href="/api/users/basic-data" class="btn btn-outline-light btn-lg my-2 w-50">API USERS BASIC DATA</a>
+      <a href="/user-by-id" class="btn btn-outline-light btn-lg my-2 w-50">API USER BY ID</a>
+      <a href="/crud-api-users" class="btn btn-outline-light btn-lg my-2 w-50">CRUD API USERS</a>
     </div>
   </div>
 </div>
+
+
+
